Prep for server setup.

--- a/src/controller.html
+++ b/src/controller.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-  <a href="/stream">Stream Link</a>
-  <br/>
-  <a href="/controller">Controller</a>
-
+  <h1>Strength Stream Controller</h1>
+  <div id="controller" class="Controller">
+  </div>
+  <script src="/assets/StrengthStreamController.pkg.js"></script>
 </body>
 
 </html>
