--- a/src/stream.html
+++ b/src/stream.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-  <a href="/stream">Stream Link</a>
-  <br/>
-  <a href="/controller">Controller</a>
 
+  <div id="overlay" class="Overlay">
+  </div>
+  <script src="/assets/StrengthStreamOverlay.pkg.js"></script>
 </body>
 
 </html>
