--- a/src/stream.html
+++ b/src/stream.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="/assets/Main.css">
 </head>
 
-<body>
+<body style="overflow: hidden;">
 
   <div id="overlay" class="Overlay">
   </div>
